--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,17 +7,17 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name"
-    android:icon="@drawable/ic_menu_add_green">
+    android:icon="@drawable/ic_menu_add_green"
+    
+    android:name="LiqoidApplication">
+
 
         <activity android:name="LiqoidMainActivity"
                   android:label="@string/app_name"
                   android:icon="@drawable/ic_menu_add_green"
                   android:theme="@android:style/Theme.NoTitleBar"
-
           >
-
-      
-            <intent-filter>
+    <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
