--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,19 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.quadrillenschule.liquidroid"
       android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="0.1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application android:label="@string/app_name"
-    android:icon="@drawable/ic_menu_add_green"
+    android:icon="@drawable/lqfb"
     
     android:name="LiqoidApplication">
 
 
         <activity android:name="LiqoidMainActivity"
                   android:label="@string/app_name"
-                  android:icon="@drawable/ic_menu_add_green"
+                  android:icon="@drawable/lqfb"
                   android:theme="@android:style/Theme.NoTitleBar"
           >
     <intent-filter>
