--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,10 @@
       package="de.quadrillenschule.liquidroid"
       android:versionCode="1"
       android:versionName="0.1"
+
       android:installLocation="auto">
- 
+     <uses-sdk android:minSdkVersion="1"/>
+   
     <supports-screens
             android:smallScreens="true"
             android:normalScreens="true"
@@ -12,10 +14,9 @@
             android:anyDensity="true" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
-
     <application android:label="@string/app_name"
     android:icon="@drawable/lqfb"
-    
+
     android:name="LiqoidApplication">
 
 
