--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="de.quadrillenschule.liquidroid"
-      android:versionCode="5"
-      android:versionName="0.1.4"
+      android:versionCode="6"
+      android:versionName="0.1.5"
 
       android:installLocation="auto">
     <uses-sdk android:minSdkVersion="1"/>
@@ -24,6 +24,7 @@
                   android:label="@string/app_name"
                   android:icon="@drawable/lqfb"
                   android:theme="@android:style/Theme.NoTitleBar"
+                    android:configChanges="orientation|keyboardHidden"
           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,17 +33,17 @@
         </activity>
         <activity android:name="UpcomingTabActivity"
                   android:label="@string/app_name"
-              
+                android:configChanges="orientation|keyboardHidden"
           android:theme="@android:style/Theme.NoTitleBar"
          />
         <activity android:name="RecentTabActivity"
                   android:label="@string/app_name"
-                
+                  android:configChanges="orientation|keyboardHidden"
           android:theme="@android:style/Theme.NoTitleBar"
           />
         <activity android:name="InitiativesTabActivity"
                   android:label="@string/app_name"
-                
+                  android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar"
 
           />
@@ -50,12 +51,14 @@
         <activity android:name="AreasTabActivity"
                   android:label="@string/app_name"
                      android:theme="@android:style/Theme.NoTitleBar"
+                       android:configChanges="orientation|keyboardHidden"
 
             
           />
         <activity android:name="AreaListView"
                   android:label="@string/app_name"
      android:theme="@android:style/Theme.NoTitleBar"
+       android:configChanges="orientation|keyboardHidden"
 
           />
         <activity android:name="GlobalPrefsActivity" />
