--- a/ant.properties
+++ b/ant.properties
@@ -15,5 +15,6 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
-key.store="..\\\\\\\\..\\\\\\\\keystore\\\\\\\\liqoid.jks"
+key.store="..\\\\\\\\\\\\\\\\..\\\\\\\\\\\\\\\\keystore\\\\\\\\\\\\\\\\liqoid.jks"
 key.alias=mykey
+jar.libs.dir=../../../../../Program Files/Android/android-sdk/extras/android/support/v4
