--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.quadrillenschule.liquidroid"
-    android:versionCode="25"
-    android:versionName="0.2.5"
+    android:versionCode="30"
+    android:versionName="0.3.0"
     android:installLocation="auto">
     <uses-sdk android:minSdkVersion="1"/>
     <supports-screens
@@ -15,7 +15,9 @@
     <application android:label="@string/app_name"
         android:icon="@drawable/lqfb"
         android:name="LiqoidApplication">
-        <activity android:name="LiqoidMainActivity"
+        <service android:name="de.quadrillenschule.liquidroid.service.LiqoidService" />
+        <receiver android:name="de.quadrillenschule.liquidroid.service.UpdateAlarmReceiver"/>
+         <activity android:name="LiqoidMainActivity"
                   android:label="@string/app_name"
                   android:icon="@drawable/lqfb"
                   android:theme="@android:style/Theme.NoTitleBar"
@@ -46,7 +48,7 @@
                   android:theme="@android:style/Theme.NoTitleBar"
                   android:configChanges="orientation|keyboardHidden"
           />
-            <activity android:name="SearchActivity"
+        <activity android:name="SearchActivity"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar"
                   android:configChanges="orientation|keyboardHidden"
